--- a/cv.html
+++ b/cv.html
@@ -8,7 +8,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"/>
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="/assets/css/cv2 print.css">
+    <link rel="stylesheet" media="print" href="/assets/css/cv2 print.css">
+    <link rel="stylesheet" media="screen" href="/assets/css/bootstrap.css">
+    <link rel="stylesheet" media="screen" href="/assets/css/cv2.css">
   </head>
   <body>
 
@@ -63,7 +65,7 @@
             <span class="role">{{ job.role }}</span>
             {%- if job.team %}
             <span class="team">{{ job.team }}</span>
-            {%- endif -%}.
+            {%- endif -%}
         </h2>
         <ul class="list-unstyled when">
         {% for dates in job.when %}
@@ -94,7 +96,7 @@
             <span class="role">{{ job.role }}</span>
             {%- if job.team %}
             <span class="team">{{ job.team }}</span>
-            {%- endif -%}.
+            {%- endif -%}
         </h2>
         <ul class="list-unstyled when">
         {% for dates in job.when %}
