--- a/cv.html
+++ b/cv.html
@@ -61,9 +61,9 @@
 <section class="job row mb-5">
     <div class="headline row col-lg-3 col-md-4">
         <h2 class="description col-sm-12">
-            <span class="who">{{ job.who }}</span>
             <span class="role">{{ job.role }}</span>
-            {%- if job.team %}
+            <span class="who">{{ job.who }}</span>
+            {%- if job.team -%}
             <span class="team">{{ job.team }}</span>
             {%- endif -%}
         </h2>
@@ -92,9 +92,9 @@
 <section class="job row mb-5">
     <div class="headline row col-lg-3 col-md-4">
         <h2 class="description col-sm-12">
-            <span class="who">{{ job.who }}</span>
             <span class="role">{{ job.role }}</span>
-            {%- if job.team %}
+            <span class="who">{{ job.who }}</span>
+            {%- if job.team -%}
             <span class="team">{{ job.team }}</span>
             {%- endif -%}
         </h2>
