--- a/cv.html
+++ b/cv.html
@@ -20,7 +20,7 @@
         </div>
 
         <header class="display-5">Tony John Holroyd</header>
-        <p>linkedin@tonyholroyd.co.uk / 0780 332 1919</p>
+        <p>{{ "9191 233 0870 / ku.oc.dyorlohynot@nideknil" | split: "" | reverse | join: "" }}</p>
 
         {% assign cvdetails = site.testjobs %}
 
